# zotero-docai-pipeline

./: .coderabbit.yaml  .gitignore  LICENSE  MANIFEST.in  README.md  environment.yml  main.py  pyproject.toml  pyrightconfig.json  requirements.txt
.github/workflows/: coderabbit-pr-automation-manual.yml  coderabbit-pr-automation-pr.yml  coderabbit-pr-automation.yml  coderabbit-pr-comment-trigger.yml
conf/: config.yaml
conf/download/: default.yaml
conf/ocr/: default.yaml  pageindex.yaml
conf/storage/: default.yaml
conf/tag_adding/: default.yaml
conf/tagging/: default.yaml
conf/tree_structure/: default.yaml
conf/zotero/: default.yaml
docs/shared-workflow-reviews/: zotero-docai-pipeline-shared-workflow-divergence-1898849.md  zotero-docai-pipeline-shared-workflow-divergence-2f0a9b1.md  zotero-docai-pipeline-shared-workflow-divergence-40864be.md  zotero-docai-pipeline-shared-workflow-divergence-475efc8.md  zotero-docai-pipeline-shared-workflow-divergence-5da8303.md  zotero-docai-pipeline-shared-workflow-divergence-74ed944.md  zotero-docai-pipeline-shared-workflow-divergence-d460cee.md  zotero-docai-pipeline-shared-workflow-divergence-d479814.md  zotero-docai-pipeline-shared-workflow-normalization-1898849.patch  zotero-docai-pipeline-shared-workflow-normalization-40864be.patch  zotero-docai-pipeline-shared-workflow-normalization-475efc8.patch  zotero-docai-pipeline-shared-workflow-normalization-5da8303.patch  zotero-docai-pipeline-shared-workflow-normalization-74ed944.patch  zotero-docai-pipeline-shared-workflow-normalization-d460cee.patch  zotero-docai-pipeline-shared-workflow-normalization-d479814.patch
zotero_docai_pipeline/: __init__.py  __main__.py
zotero_docai_pipeline/cli/: __init__.py  commands.py  main.py
zotero_docai_pipeline/clients/: __init__.py  exceptions.py  mistral_client.py  ocr_client.py  pageindex_client.py  pageindex_tree_client.py  temp_file_utils.py  tree_client.py  zotero_client.py
zotero_docai_pipeline/conf/: config.yaml
zotero_docai_pipeline/conf/credentials/: default.yaml
zotero_docai_pipeline/conf/download/: default.yaml
zotero_docai_pipeline/conf/export/: default.yaml
zotero_docai_pipeline/conf/ocr/: mistral.yaml  pageindex.yaml
zotero_docai_pipeline/conf/processing/: default.yaml
zotero_docai_pipeline/conf/storage/: default.yaml
zotero_docai_pipeline/conf/tag_adding/: default.yaml
zotero_docai_pipeline/conf/tagging/: default.yaml
zotero_docai_pipeline/domain/: __init__.py  config.py  markdown_converter.py  models.py  note_formatter.py  note_validator.py  table_converter.py  tree_processor.py
zotero_docai_pipeline/orchestration/: __init__.py  pipeline.py  processor.py
zotero_docai_pipeline/utils/: __init__.py  export.py  logging.py  progress.py  redaction.py  retry.py  text.py
(+2 files in other folders)
