[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "zotero-docai-pipeline"
version = "0.1.0"
description = "Automate PDF-to-Markdown extraction for Zotero attachments using OCR providers (PageIndex or Mistral). Results are saved as rich text Zotero notes ready for Notero/Notion sync, with optional hierarchical tree structure extraction."
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
keywords = ["zotero", "ocr", "document-ai", "pdf", "markdown", "hydra", "mistral", "pageindex"]
authors = [
    {name = "Franck MEYER", email = "franck.meyer@kaist.ac.kr"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Text Processing :: Markup",
    "Topic :: Utilities",
]
dependencies = [
    "pyzotero",
    "mistralai",
    "tabulate",
    "pageindex",
    "hydra-core>=1.3.0",
    "omegaconf",
]

[tool.setuptools]

[tool.setuptools.packages.find]
where = ["."]
include = ["zotero_docai_pipeline*"]
exclude = ["tests*", "*.tests*", "*.tests.*", "tests.*"]

[tool.ruff]
target-version = "py311"
line-length = 88
exclude = [
    ".git",
    "__pycache__",
    ".venv",
    "venv",
    ".mypy_cache",
    ".ruff_cache",
    ".pytest_cache",
    "build",
    "dist",
    "*.egg-info",
]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # Pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
]
ignore = [
]

[tool.ruff.lint.isort]
known-first-party = ["zotero_docai_pipeline"]
force-sort-within-sections = true
split-on-trailing-comma = true

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.pyright]
pythonVersion = "3.11"
typeCheckingMode = "basic"
reportMissingImports = true
reportMissingTypeStubs = false
include = [
    "zotero_docai_pipeline",
    "main.py",
]
exclude = [
    "**/__pycache__",
    "**/.venv",
    "**/venv",
    "**/build",
    "**/dist",
    "**/*.egg-info",
]
